# noah

./: CHANGELOG.md  Cargo.toml  noah.cabal  shell.nix
src/: Main.hs  db.rs  main.rs  search.rs
src/discovery/: embedding.rs  mod.rs  search.rs
